[package]
name = "ltrs"
version = "0.1.0"
authors = ["Marcos F. Pontes <mfprezende@gmail.com>"]
license = "MIT"
edition = "2021"
categories = ["learning-to-rank", "information-retrieval", "data-structures"]
description = """Learning to rank library for Rust."""
documentation = "https://docs.rs/ltrs"
homepage = "https://github.com/marcosfpr/ltrs"
repository = "https://github.com/marcosfpr/ltrs"
readme = "README.md"
keywords = ["search", "ranking", "learning-to-rank", "information", "retrieval"]

[dependencies]
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
env_logger = "0.9.0"
colored = "2.0.0"
encode_unicode = "0.3.6"
lazy_static = "1.4.0"
rand = "0.8.5"
memmap2 = "0.5.3"
fs2 = "0.4.3"
tempfile = "3"

[dev-dependencies]
approx = "0.5.1"


[profile.release]
debug = true
