[package]
name = "adarank"
version = "0.1.0"
authors = ["marcosfpr <mfprezende@gmail.com>"]
license = "MIT"
edition = "2021"
description = """AdaRank: a boosting algorithm for information retrieval"""
documentation = "https://docs.rs/adarank"
homepage = "https://github.com/marcosfpr/adarank"
repository = "https://github.com/marcosfpr/adarank"
readme = "README.md"
keywords = ["search", "ranking", "learning-to-rank", "information", "retrieval"]

[dependencies]
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = "0.4"
colored = "2.0.0"
encode_unicode = "0.3.6"
lazy_static = "1.4.0"
rand = "0.8.5"
tracing = "0.1.41"

[dev-dependencies]
approx = "0.5.1"
tracing-subscriber = "0.3.19"
